Correcting text alignment CSS

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -87,6 +87,7 @@ main {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     h2 {
       font-size: 22px;
       margin-top: 25px;
@@ -271,5 +272,12 @@ table {
 }
 
 blockquote {
+  background: #f9f9f9;
+  border-left: 3px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
   font-style: italic;
+}
+blockquote p {
+  display: inline-block;
 }
